2013-12-15  John Tobey <jtobey@john-edwin-tobey.org>

	* lang/SyntaxForms.java (class PairWithPositionSyntaxForm):
	Make public.

2013-12-13  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme):  Add definitions for r6rs/r7rs
	exception handling.

2013-12-09  Per Bothner  <per@bothner.com>

	* lang/SyntaxForms.java (class PairWithPositionSyntaxForm):
	Implement Externalizable.

2013-12-08  Per Bothner  <per@bothner.com>

	* lang/SyntaxForms.java (class SimpleSyntaxForm):
	Implement Externalizable.
	(class PairSyntaxForm): Likewise.
	This helps fix Svannah bug #40822 "Exporting macro-defined macro:
	Internal error".

2013-12-05  Per Bothner  <per@bothner.com>

	* lang/SyntaxTemplate.java: Update support for '(... ...)' - which
	was added 2005-06-26 - in that we no longer use java.lang.String
	for Scheme symbols.
	This fixes Savannah bug #40814 "R6RS/R7RS ellipsis escapes".

2013-12-01  Per Bothner  <per@bothner.com>

	* lang/NamedException.java: Some re-working to make it more robust
	and correct for both Guile-style catch/throw and R7RS error.
	(toString): Do formatting here (rather than in error function).
	* standard/Scheme.java (initScheme): Added error-object?,
	error-object-message, error-object-irritants, read-error?,
	and file-error?.  Updated catch, throw, error.

	* standard/Scheme.java (initScheme): Add 'letrec*'.

2013-11-30  Per Bothner  <per@bothner.com>

	* lang/Translator.java (define): When alias is needed, do a
	pushRenamedAlias, so we can later pop it.
	(rewrite_body): Pop aliases.  Needed in case of nested definitions
	with the same pattern variable inside a template.
	This fixes Savannah bug #40729 "NPE in inline-compiler
	for AppendValues".

2013-11-18  Per Bothner  <per@bothner.com>

	* lang/Translator.java (define): When creating an alias, the
	generated name should be an uninterned symbol, not an uninterned
	String, since NameLookup#lookup uses equals when comparing names.
